Simplifying examples to not require slf4j being properly setup (#107)
* Simplifying examples to not require slf4j being properly setup
* Using IO